saveing all payment depending tables